# search_engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  index_builder.cpp  index_builder_reordering.cpp  main.cpp  query_process.cpp
component/: BlockEncoder.cpp  BlockEncoder.h  CoreBuilder.cpp  CoreBuilder.h  DocTableBuilder.cpp  DocTableBuilder.h  HTMLParser.cpp  HTMLParser.h  InvertedListBuilder.cpp  InvertedListBuilder.h  LexiconBuilder.cpp  LexiconBuilder.h  PostingsBuilder.cpp  PostingsBuilder.h
component/constant/: status_code.cpp  status_code.h
component/doc_reordering/: BaseReordering.cpp  BaseReordering.h  BlandfordBlelloch.cpp  BlandfordBlelloch.h
component/mongo_client/: MongoService.cpp  MongoService.h
component/query_process/: QueryExecution.cpp  QueryExecution.h
component/utils/: BitStream.cpp  BitStream.h  DocumentParser.cpp  DocumentParser.h  encoding.cpp  encoding.h
config/: index_builder.cfg  query_process_test.cfg  reordering_builder.cfg
